<resources>
    <string name="app_name">E-ATM</string>
    <string name="error_invalid_account_number">Please Enter  Valid Account Number</string>
    <string name="text_double_exit">Please click BACK again to exit</string>
    <string name="text_bank_name">EXALTURE BANK </string>
    <string name="text_services">SERVICES</string>
    <string name="text_account_number">ENTER YOUR ACCOUNT NUMBER</string>
    <string name="text_account_type">SELECT YOUR ACCOUNT TYPE</string>
    <string name="text_button_submit">SUBMIT</string>
    <string name="account_number">Account Number</string>
    <string name="text_button_exit">EXIT</string>
    <string name="text_button_cancel">CANCEL</string>
    <string name="text_button_deposit">DEPOSIT</string>
    <string name="text_button_withdraw">WITHDRAWAL</string>
    <string name="text_button_transfer">TRANSFER</string>
    <string name="text_button_pin_change">CHANGE PIN</string>
    <string name="text_button_balance_enquirey">BALANCE ENQUIREY</string>
    <string name="text_mini_statement">MINI STATEMENT</string>
    <string name="text_button_other">OTHERS</string>
    <string name="enter_pin_number">PIN NUMBER</string>
    <string name="enter_deposit_amount">ENTER THE AMOUNT TO DEPOSIT</string>
    <string name="enter_withdraw_amount">ENTER THE AMOUNT TO WITHDRAW</string>
    <string name="enter_transfer_amount">ENTER THE AMOUNT TO TRANSFER</string>
    <string name="enter_pin_change">ENTER NEW PIN NUMBER</string>
    <string name="pin_number">Pin Number</string>
    <string name="pin_confirmation">Confirm Pin Number </string>
    <string name="error_pin_mismatch">Mismatch Password</string>
    <string name="error_already_exist">Already Registered</string>
    <string name="dialog_ok">OK</string>
    <string name="amount">Amount</string>
    <string name="error_invalid_pin_number">Please Enter Valid Pin Number</string>
    <string name="enter_multiples_of_100">Please Enter Multiples Of 100</string>
    <string name="enter_amount">Please Enter Amount</string>
    <string name="back_to_main_page">GO BACK TO MAIN PAGE</string>
    <string name="balance_link">View Balance</string>
    <string name="insufficient_balance">Insufficient Balance</string>
    <string name="enter_number_to_transfer">ENTER ACCOUNT NUMBER TO TRANSFER</string>
    <string name="error_something_went_wrong">Something Went Wrong....</string>
    <string name="error_please_enter_value">Please Enter Value</string>
    <string name="error_amount_to_transfer">Please Enter Amount To Transfer</string>
    <string name="error_transfer_denied">Transfer To Your Own Account Is Not Possible</string>
    <string name="error_insufficient_balance_to_transfer">Insufficient Balance To Transfer</string>
    <string name="error_confirmation_pin_number">Please Enter Valid Pin Number</string>
    <string name="error_invalid_length">Length Should Be 4</string>
    <string name="transaction_date">Date</string>
    <string name="transaction_time">Time</string>
    <string name="transaction_remark">Remark</string>
    <string name="transaction_successful">TRANSACTION SUCCESSFUL!</string>
    <string name="show_balance">SHOW BALANCE</string>
    <string name="show_atm">ATM</string>
    <string name="dialog_title">UPDATE</string>
    <string name="dialog_message">UPDATE SUCCESSFULLY</string>
    <string name="enter_new_phone_number">ENTER NEW PHONE NUMBER PAGE</string>
    <string name="new_phone_number">NEW PHONE NUMBER</string>
    <string name="show_debit">Dr</string>
    <string name="show_credit">Cr</string>
    <string name="current_balance">Current Balance : ₹ %1$s.00</string>
    <string name="mini_statement_amount">₹ %1$s.00</string>
    <string name="mini_statement_no_transaction">NO TRANSACTION</string>
    <string name="reference_number">Reference Number</string>
    <string name="to">To</string>
    <string name="error_try_again">Try Again After Few Seconds!!!</string>
    <string name="transfer_account_number">AccountNumber : %1s</string>
    <string name="show_date">Date : %1s</string>
    <string name="show_time">Time : %1s</string>
    <string name="show_remark">Remark : %1s</string>
    <string name="show_amount">Amount : %1s</string>
    <string name="error_invalid_phone_number">Please Enter Valid Phone Number</string>
    <string name="error_empty_phone_number">Phone Number Cannot Be Empty</string>
    <string name="error_empty_account_number">Account Number Cannot Be Empty</string>
    <string name="error_empty_pin_number">Pin Number Cannot Be Empty</string>
    <string name="error_invalid_button">INVALID BUTTON</string>
    <string name="create_new_account">Don\'t have an account? Create </string>
    <string name="full_name">Full Name </string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="account_opening_amount">Account Opening Amount</string>
    <string name="account_type">Account Type :</string>
    <string name="account_type_saving">Savings</string>
    <string name="account_type_current">Current</string>
    <string name="new_account">NEW ACCOUNT</string>
    <string name="text_button_create">CREATE</string>
    <string name="dialog_permission_denied">Permission Denied</string>
    <string name="dialog_permission_denied_message">Telephone permission is needed to make calls</string>
    <string name="dialog_go_to_settings">Go To Settings</string>
    <string name="dialog_enable_settings">To make the call,allow E-ATM access to your telephone.Tap Settings > Permissions,and turn Telephone On</string>
    <string name="button_close">CLOSE</string>
    <string name="dialog_account_type">Choose Account Type </string>
    <string name="website_url">http://www.exalture.com/</string>
    <string name="facebook_url">http://www.facebook.com/exalture/</string>
    <string name="mail_id">sales@exalture.com</string>
    <string name="location_coordinates">geo:10.0129509,76.3466792?q=</string>
    <string name="location_name">Exalture Software Labs Private Limited</string>
    <string name="map_package_name">com.google.android.apps.maps</string>
    <string name="telephone_number">0484 298 0722</string>
</resources>