<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorAccent"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    tools:context=".MiniStatementActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/transaction_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorBackgroundDark"
            android:hint="@string/transaction_date" />
        <TextView
            android:id="@+id/transaction_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:layout_below="@id/transaction_date"
            android:textColor="@color/colorBackgroundDark"
            android:hint="@string/transaction_time" />

        <TextView
            android:id="@+id/transaction_remark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:layout_below="@id/transaction_time"
            android:hint="@string/transaction_remark" />

        <TextView
            android:id="@+id/transaction_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_toLeftOf="@id/transaction_remark_display"
            android:layout_toStartOf="@id/transaction_remark_display"
            android:layout_centerVertical="true"
            android:hint="@string/amount" />

        <TextView
            android:id="@+id/transaction_remark_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="16dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="start" />



    </RelativeLayout>

</androidx.cardview.widget.CardView>
</layout>