<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard_background"
    android:weightSum="7.0"
    tools:context=".dashboard.MainActivity">
        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="@dimen/margin_0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo3"
            android:layout_marginTop="@dimen/margin_40dp"
            android:layout_marginStart="@dimen/margin_250dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="@dimen/margin_250dp" />
    <TextView
        android:id="@+id/label_services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/text_services"
        android:textColor="@color/colorBlue"
        android:textSize="@dimen/font_size_25sp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_80dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnDeposit"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/margin_16dp" />

        <Button
            android:id="@+id/btnDeposit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="220dp"
            android:background="@drawable/round_corners"
            android:drawableLeft="@drawable/icon_deposite"
            android:gravity="center"
            android:padding="@dimen/padding_10dp"
            android:text="@string/text_button_deposit"
            android:textColor="@color/colorLightWhite"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/btnWithdraw"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_services"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginRight="220dp" />

        <Button
            android:id="@+id/btnWithdraw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginEnd="180dp"
            android:background="@drawable/round_corners"
            android:drawableLeft="@drawable/icon_withdraw"
            android:gravity="center"
            android:padding="@dimen/padding_10dp"
            android:text="@string/text_button_withdraw"
            android:textColor="@color/colorLightWhite"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/btnMini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnDeposit"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginRight="180dp" />

        <Button
            android:id="@+id/btnMini"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/margin_150dp"
            android:background="@drawable/round_corners"
            android:drawableLeft="@drawable/icon_mini_statement"
            android:gravity="center"
            android:padding="@dimen/padding_10dp"
            android:text="@string/text_mini_statement"
            android:textColor="@color/colorLightWhite"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnWithdraw"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_150dp" />

        <Button
            android:id="@+id/btnBalanceEnquirey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginEnd="145dp"
            android:background="@drawable/round_corners"
            android:drawableLeft="@drawable/icon_balance"
            android:gravity="center"
            android:padding="@dimen/padding_10dp"
            android:text="@string/text_button_balance_enquirey"
            android:textColor="@color/colorLightWhite"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnMini"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginRight="145dp" />

        <Button
            android:id="@+id/btnPinChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:layout_marginTop="@dimen/margin_2dp"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:background="@drawable/round_corners"
            android:drawableRight="@drawable/icon_pin_change"
            android:gravity="center"
            android:padding="@dimen/padding_10dp"
            android:text="@string/text_button_pin_change"
            android:textColor="@color/colorLightWhite"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/btnTransfer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBalanceEnquirey"
            android:layout_marginLeft="145dp"
            android:layout_marginRight="@dimen/margin_10dp" />

        <Button
            android:id="@+id/btnTransfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:background="@drawable/round_corners"
            android:drawableRight="@drawable/icon_transfer"
            android:gravity="center"
            android:padding="@dimen/padding_10dp"
            android:text="@string/text_button_transfer"
            android:textColor="@color/colorLightWhite"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/btnOthers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnPinChange"
            android:layout_marginLeft="175dp"
            android:layout_marginRight="@dimen/margin_16dp" />

        <Button
            android:id="@+id/btnOthers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_200dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:background="@drawable/round_corners"
            android:drawableRight="@drawable/icon_others"
            android:gravity="center"
            android:padding="@dimen/padding_10dp"
            android:text="@string/text_button_other"
            android:textColor="@color/colorLightWhite"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/btnCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnTransfer"
            android:layout_marginLeft="@dimen/margin_200dp"
            android:layout_marginRight="@dimen/margin_16dp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="230dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_90dp"
            android:background="@drawable/round_corners"
            android:drawableRight="@drawable/icon_transfer"
            android:gravity="center"
            android:padding="@dimen/padding_10dp"
            android:text="@string/text_button_exit"
            android:textColor="@color/colorLightWhite"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnOthers"
            android:layout_marginLeft="230dp"
            android:layout_marginRight="@dimen/margin_16dp" />



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>